sql-tests/tests/snapshots/tests__testdata__chunks_to_freeze.sql.snap
---
source: sql-tests/tests/tests.rs
expression: query_result
---
 plan 
------
 1..5
(1 row)

   create_hypertable   
-----------------------
 (13,public,metric1,t)
(1 row)

 add_compression_policy 
------------------------
                   1009
(1 row)

   create_hypertable   
-----------------------
 (15,public,metric2,t)
(1 row)

 add_compression_policy 
------------------------
                   1010
(1 row)

         isnt_empty         
----------------------------
 ok 1 - chunks were created
(1 row)

                   is_empty                    
-----------------------------------------------
 ok 2 - zero results when no chunks compressed
(1 row)

                      results_eq                       
-------------------------------------------------------
 ok 3 - 15 uncompressed chunks should have been chosen
(1 row)

                      results_eq                      
------------------------------------------------------
 ok 4 - 15 compressed chunks should have been created
(1 row)

                        results_eq                         
-----------------------------------------------------------
 ok 5 - view should return the 15 chosen compressed chunks
(1 row)

 finish 
--------
(0 rows)


