sql-tests/tests/snapshots/tests__testdata__job_metrics_sidechannel.sql.snap
---
source: sql-tests/tests/tests.rs
expression: query_result
---
 plan  
-------
 1..22
(1 row)

 job_id 
--------
   1005
(1 row)

  is   |  ok   
-------+-------
 ok 1  | ok 2
 ok 3  | ok 4
 ok 5  | ok 6
 ok 7  | ok 8
 ok 9  | ok 10
 ok 11 | ok 12
 ok 13 | ok 14
 ok 15 | ok 16
 ok 17 | ok 18
 ok 19 | ok 20
(10 rows)

  ok   
-------
 ok 21
(1 row)

  ok   
-------
 ok 22
(1 row)

 finish 
--------
(0 rows)


