sql-tests/tests/snapshots/tests__testdata__metric_rollups_scan_for_new_rollups.sql.snap
---
source: sql-tests/tests/tests.rs
expression: query_result
---
 plan 
------
 1..3
(1 row)

  ok  
------
 ok 1
(1 row)

  ok  
------
 ok 2
(1 row)

  ok  
------
 ok 3
(1 row)

 finish 
--------
(0 rows)


