sql-tests/tests/snapshots/tests__testdata__ps_trace.delete_all_traces.sql.snap
---
source: sql-tests/tests/tests.rs
expression: query_result
---
 plan  
-------
 1..16
(1 row)

 put_operation 
---------------
             1
(1 row)

 put_tag_key 
-------------
        1001
(1 row)

 put_tag 
---------
       2
(1 row)

                  is                   
---------------------------------------
 ok 1 - _ps_trace.schema_url has 1 row
(1 row)

                       is                       
------------------------------------------------
 ok 2 - _ps_trace.instrumentation_lib has 1 row
(1 row)

                  is                  
--------------------------------------
 ok 3 - _ps_trace.operation has 1 row
(1 row)

                 is                 
------------------------------------
 ok 4 - _ps_trace.tag_key has 1 row
(1 row)

               is                
---------------------------------
 ok 5 - _ps_trace.tag has 2 rows
(1 row)

               is                
---------------------------------
 ok 6 - _ps_trace.span has 1 row
(1 row)

               is                
---------------------------------
 ok 7 - _ps_trace.link has 1 row
(1 row)

                is                
----------------------------------
 ok 8 - _ps_trace.event has 1 row
(1 row)

psql:/testdata/ps_trace.delete_all_traces.sql:75: NOTICE:  truncate cascades to table "instrumentation_lib"
 delete_all_traces 
-------------------
 
(1 row)

                   is                   
----------------------------------------
 ok 9 - _ps_trace.schema_url has 0 rows
(1 row)

                        is                        
--------------------------------------------------
 ok 10 - _ps_trace.instrumentation_lib has 0 rows
(1 row)

                   is                   
----------------------------------------
 ok 11 - _ps_trace.operation has 0 rows
(1 row)

                  is                  
--------------------------------------
 ok 12 - _ps_trace.tag_key has 0 rows
(1 row)

                is                
----------------------------------
 ok 13 - _ps_trace.tag has 0 rows
(1 row)

                is                 
-----------------------------------
 ok 14 - _ps_trace.span has 0 rows
(1 row)

                is                 
-----------------------------------
 ok 15 - _ps_trace.link has 0 rows
(1 row)

                 is                 
------------------------------------
 ok 16 - _ps_trace.event has 0 rows
(1 row)

 finish 
--------
(0 rows)


